--- a/rapporter/Better Thesis/myrefs.bib
+++ b/rapporter/Better Thesis/myrefs.bib
@@ -272,3 +272,96 @@
 	year={1997},
 	publisher={Elsevier}
 }
+
+@article{SCface,
+	title={SCface--surveillance cameras face database},
+	author={Grgic, Mislav and Delac, Kresimir and Grgic, Sonja},
+	journal={Multimedia tools and applications},
+	volume={51},
+	number={3},
+	pages={863--879},
+	year={2011},
+	publisher={Springer}
+}
+
+@article{svm_face,
+	title={Evaluation of face recognition techniques using PCA, wavelets and SVM},
+	author={Gumus, Ergun and Kilic, Niyazi and Sertbas, Ahmet and Ucan, Osman N},
+	journal={Expert Systems with Applications},
+	volume={37},
+	number={9},
+	pages={6404--6408},
+	year={2010},
+	publisher={Elsevier}
+}
+
+@inproceedings{svm_marks,
+	title={Automated identification of relatively permanent pigmented or vascular skin marks (RPPVSM)},
+	author={Nurhudatiana, Arfika and Kong, Adams Wai-Kin and Altieri, Lisa and Craft, Noah},
+	booktitle={2013 IEEE International Conference on Acoustics, Speech and Signal Processing},
+	pages={2984--2988},
+	year={2013},
+	organization={IEEE}
+}
+
+@article{svm_guide,
+	title={A practical guide to support vector classification},
+	author={Hsu, Chih-Wei and Chang, Chih-Chung and Lin, Chih-Jen and others},
+	year={2003}
+}
+
+@misc{machine_learning,
+	title={Supervised machine learning: A review of classification techniques},
+	author={Kotsiantis, Sotiris B and Zaharakis, I and Pintelas, P},
+	year={2007}
+}
+
+@inproceedings{face_detecion_comp,
+	title={A statistical method for 3D object detection applied to faces and cars},
+	author={Schneiderman, Henry and Kanade, Takeo},
+	booktitle={Computer Vision and Pattern Recognition, 2000. Proceedings. IEEE Conference on},
+	volume={1},
+	pages={746--751},
+	year={2000},
+	organization={IEEE}
+}
+
+@article{face_detecion_comp_2,
+	title={Example-based learning for view-based human face detection},
+	author={Sung, K-K and Poggio, Tomaso},
+	journal={IEEE Transactions on pattern analysis and machine intelligence},
+	volume={20},
+	number={1},
+	pages={39--51},
+	year={1998},
+	publisher={IEEE}
+}
+
+@inproceedings{graphcut,
+	title={Interactive graph cuts for optimal boundary \& region segmentation of objects in ND images},
+	author={Boykov, Yuri Y and Jolly, M-P},
+	booktitle={Computer Vision, 2001. ICCV 2001. Proceedings. Eighth IEEE International Conference on},
+	volume={1},
+	pages={105--112},
+	year={2001},
+	organization={IEEE}
+}
+
+@inproceedings{yeast,
+	title={Automated Counting of Yeast Colonies using the Fast Radial Transform Algorithm.},
+	author={Schier, Jan and Kov{\'a}r, Bohumil},
+	booktitle={Bioinformatics},
+	pages={22--27},
+	year={2011}
+}
+
+@article{opencv,
+	title={The opencv library},
+	author={Bradski, Gary and others},
+	journal={Doctor Dobbs Journal},
+	volume={25},
+	number={11},
+	pages={120--126},
+	year={2000},
+	publisher={M AND T PUBLISHING INC}
+}
