--- a/rapporter/Better Thesis/tack.tex
+++ b/rapporter/Better Thesis/tack.tex
@@ -1,5 +1,6 @@
 \begin{acknowledgments}
 
+I would like to thank the supervisors at NFC in Linköping for their support and guidance during this master thesis. I also want to thank Lasse Alfredsson and Martin Danelljan at Linköpings university for their help during the master thesis process. A special thanks goes to my fiancée for her unconditional love and support through my work. 
 
   \addvspace{1em}
   \begin{flushright}
