--- a/rapporter/Better Thesis/Conclusion.tex
+++ b/rapporter/Better Thesis/Conclusion.tex
@@ -1,1 +1,5 @@
 \chapter{Conclusion}\label{cha:conclusion}
+
+This master thesis has examined the possibilities to develop an algorithm which could detect facial marks and separate them into permanent and non-permanent. The result from the experiments shows that the detector can initially find the facial mark with high recall but with a low precision. The precision increases as the false detections are eliminated. The mark classifier demonstrates good result with its accuracy of 90\%.  
+
+A proposed remedy for the low precision on the detector is to improve the elimination of the false candidates. The hair-detector is to crude and may be combined with or replaced by a module which looks at the Fourier Transform of the candidates. The mark classifier could perform better with better discriminative features. By finding better features through examination of the differences between permanent and non-permanent marks.
