--- a/rapporter/Better Thesis/Related_work.tex
+++ b/rapporter/Better Thesis/Related_work.tex
@@ -1,13 +1,13 @@
-\chapter{Related work/Background }
+\chapter{Related work}\label{cha:related_work}
 The work of systematically recording physical measurements for law enforcement was introduced by Alphonse Bertillon as early as in the 19th century. He developed the Bertillonage system since he believed that each person could be uniquely identified by a set of measurements \cite{Bertillon}. This system was however outdated quickly thanks to the explosion of technology.
 
-Resent research by Srinivas et al. \cite{automatic_detector_2015} have resulted in an automatic and semi-automatic facial recognition processes. It uses a multiscale automatic facial mark detector for the automatic detector and receive a equal error rate of 15.48\%. This result was improved by introducing human knowledge in the semi-automatic detector.
+Resent research by Vorder Bruegge et al. \cite{automatic_detector_2015} helped the development of an automatic and semi-automatic facial mark detector. It uses a multiscale automatic facial mark detector for the automatic detector and receive a equal error rate of 15.48\%. This result was improved by introducing human knowledge in the semi-automatic detector.
 
-When distinguishing identical twins it is useful to look at facial marks which has been examined in an other article by Srinivas et al. \cite{twins}. The study concluded that the facial marks can be uses as features for distinguishing between identical twins even if there seems to exist a correlations between the twins set of marks.
+When distinguishing identical twins it is useful to look at facial marks which has been examined in an other article by Srinivas et al. \cite{twins}. The study concluded that the facial marks can be used as features for distinguishing between identical twins even if there seems to exist a correlations between the twins set of marks.
 
 Nurhudatiana et al. \cite{statistic_RPPVSM} describes in their article the distribution of Relatively Permanent Pigmented or Vascular Skin Marks (RPPVSM) in Caucasians, Asians, and Latinos. They conclude that if the number of RPPVSM are few they are randomly distributed which can be used for personal identification in law enforcement. 
 
-Anil and Park found during their research \cite{jain_facial} that facial mark can be used to increase the recall and precision for a state-of-the-art face matcher (FaceVACS). The facial mark detector used the 3x3 LoG-operator as blob detector. Adding these features to the algorithm improved the face matcher from  92.96\% to 93.90\% on the Facial Recognition Technology (FERET) database and from 91.88\% to 93.14\% on a Mugshot face database. 
+Anil and Park found during their research \cite{jain_facial} that facial mark can be used to increase the recall and precision for a state-of-the-art face matcher (FaceVACS). The facial mark detector used the 3x3 Laplacian of Gaussian-operator as blob detector. Adding these features to the algorithm improved the face matcher from  92.96\% to 93.90\% on the Facial Recognition Technology (FERET) database and from 91.88\% to 93.14\% on a Mugshot face database. 
 
 
 
