--- a/rapporter/Better Thesis/svensk-sammanfattning.tex
+++ b/rapporter/Better Thesis/svensk-sammanfattning.tex
@@ -1,1 +1,2 @@
 
+När  forensiker  försöker identifiera förövaren av ett brott använder de individuella ansiktsmärken när de jämför den misstänkta med förövaren. Ansiktsmärken används ofta vid identifikation och de hittas idag manuellt. För att skynda på denna process, är det önskvärt att detektera ansiktsmärken automatiskt. Detta examensarbete beskriver en metod för att automatisk detektera och separera permanenta och icke-permanenta märken. Den använder en snabb radial symmetri  algoritm som ett huvud element i detektorn och en stödvektormaskin för märkes klassificeraren. Resultatet visar att ansiktsmäkedetektorn har en känslighet på 64\% men endast en precision på 8\%. Klassifiseraren å andra sidan har en träffsäkerhet på 90\% med relativt få åtskilljande kännetecken. 
